media query fix on iphone

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -159,7 +159,7 @@ h1, h2, h3{
 h4{
   margin:0;
 }
-@media only screen and (max-width:480px){
+@media only screen and (max-width:1920px){
   nav{
     display:flex;
     flex-wrap:wrap;
